# autoqa_backend

./: .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Root/: manage.py
Root/AutoQA/: asgi.py  models.py  serializer.py  settings.py  urls.py  wsgi.py
Root/AutoQA/migrations/: 0001_initial.py
Root/AutoQA/services/: gherkin_services.py  redis_key_generator_service.py
Root/AutoQA/views/: execution_view.py  gherkin_view.py  scheduled_view.py
